<resources>
    <string name="error_de_conexion">Error de conexion</string>
    <string name="surgio_un_problema_durante_la_conexion">Surgio un problema durante la conexion. vuelvelo a intentar mas tarde</string>
    <string name="falla">Falla</string>
    <string name="surgio_un_error_inesperado">Surgio un problema inesperado intentalo mas tarde</string>
    <string name="almacenamiento_nube">Almacenamiento Nube</string>
    <string name="mock_texto_dialogo">Mock texto almacenamientp</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">cancelar</string>
    <string name="nombre">Nombre</string>
    <string name="siguiente">Siguiente</string>
    <string name="cedula">cedula</string>
    <string name="direccion">Direccion</string>
    <string name="ciudad">Ciudad</string>
    <string name="pais">Pais</string>
    <string name="celular">Celular</string>
    <string name="camera_option">Camara</string>
    <string name="gallery_option">Galeria</string>
    <string name="galeria_deshabilitada">La galeria esta deshabilitada en esta aplicacion</string>
    <string name="camara_deshabilitada">Los permisos de la camara estan deshabilitados ¿Desea habilitarlos?</string>
    <string name="seleccionar_foto">Seleccionar_foto</string>
    <string name="mi_pocicion_geografica">Mi posision geografica</string>
    <string name="longitud">Longiitud</string>
    <string name="mock_longitud">72.00</string>
    <string name="latitud">Latitud</string>
    <string name="mock_latitud">2.00</string>
    <string name="GPS">GPS</string>
    <string name="permisos_gps">Esta aplicacion requiere permisos sobre el gps del celular ¿Desea habilitarlos?</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_habilito_los_permisos_gps">No habilito los permisos para el uso del GPS. Debes habilitarlos para poder seguir usando la aplicacion</string>
    <string name="mi_posicion_actual">Mi posicion actual</string>
    <string name="surgio_un_error_en_gps">Surgio un error relacionado con el gps, intenta recargar la aplicacion</string>
    <string name="estado_bluetooth">Estado Bluetooth</string>
    <string name="estado_wifi">Estado wifi</string>
    <string name="Bluetooth">Bluetooth</string>
    <string name="permisos_bluetooth">No ha habilitado los permisos. ¿Desea Habilitarlos?</string>
    <string name="este_dispositivo_no_tiene_bluetooth">Este dispositivo no tiene Bluetooth</string>
    <string name="foto">Foto</string>
    <string name="guardar">Guardar</string>
    <string name="resumen">Resumen</string>
    <string name="se_ha_enviado_la_informacion_al_servidor_exitosamente">Se ha enviado la informacion al servidor exitosamente</string>
</resources>
